# ganalytics

./: .gitignore  README.md  pyproject.toml  quickstart.py  requirements.txt
src/ganalytics/: __init__.py  client.py  config.py
src/ganalytics/domains/: analytics.py  base.py  constants.py
src/ganalytics/infrastructure/: google_analytics_api.py  logger.py
src/ganalytics/interfaces/: ianalytics.py  iusecases.py
src/ganalytics/usecases/: compile_report.py  converter.py  pull_reports.py  report_templates.py
tests/: config.py  mocks.py  test_pull_reports.py  test_report_client.py  test_top_pages_report.py  test_user_behaviour_report.py
