[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mnavunawa"
version = "0.0.1"
authors = [
    {name="Mesake Navunawa", email="mesake.navunawa@gmail.com" },
]
description = "A python library for intuitive interaction with the Google Analytics API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Mesake94/ganalytics.git"

pypi-
93141f401a4694cf
9b86640ed0201724
4a1e1ff1e0033e47
739d399e2c2ad28f
c9c857d43546be29
73e6120fb9d93c2f
afa9dbd495d889ae
e57ffb9d5f8a4353